# Server-Monitor

./: .gitignore  Cargo.toml  README.md  monitor.db-journal
src/: main.rs
src/api/: handlers.rs
src/collector/: mod.rs  services.rs  system.rs
src/db/: database.rs
src/models/: metrics.rs
ui/: package-lock.json  package.json
ui/src/: App.jsx  index.css
