[package]
name = "Server-Monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
sysinfo = "0.38.3"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
